--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.js --exec babel-node -e js",
-    "start": "npx babel-node index"
+    "start": "npm index.js"
   },
   "author": "",
   "license": "ISC",
