--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "scripts": {
     "dev": "nodemon ./index.js --exec babel-node -e js",
     "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build ./server -s",
+    "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
     "start": "npm run build && node ./build/index.js",
-    "client-install": "npm install --prefix client",
-    "server": "nodemon ./index.js --exec babel-node --presets es2015,stage-2",
-    "client": "npm start --prefix client",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm install"
   },
   "author": "",
   "license": "ISC",
