--- a/package.json
+++ b/package.json
@@ -5,16 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js --exec babel-node -e js",
-    "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build ./src -s",
-    "build": "npm run clean && npm run build-babel",
-    "start": "npm run build && node ./build/index.js",
-    "heroku-postbuild": "npm install"
+    "start": "npm run start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel": "^6.23.0",
     "bcrypt": "^5.0.1",
     "chokidar": "^3.5.1",
     "cors": "^2.8.5",
