--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js --exec babel-node -e js",
-    "start": "npm run start"
+    "start": "npm "
   },
   "author": "",
   "license": "ISC",
