--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js --exec babel-node -e js",
+    "dev": "nodemon ./src/index.js --exec babel-node -e js",
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-node": "*",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
